# serde-metaform

./: CHANGELOG.md  Cargo.toml  README.md
benches/: comparison.rs
src/: error.rs  json.rs  lib.rs  write.rs
